fixed marker movement from phone location

--- a/public/index.html
+++ b/public/index.html
@@ -24,29 +24,6 @@
         <div id='map' style='width: 1280px; height: 800px;'></div>
     </section>
 
-    <!-- <section>
-        <div id='control-panel'>
-
-            <h3>Location</h3>
-            <p id="location"> - </p>
-
-            <h3>Street</h3>
-            <p id="street-being-walked"> - </p>
-
-            <h3>Active Intersection</h3>
-            <p id="active-intersection"> - </p>
-
-            <h3>Available Streets</h3>
-            <p id="available-streets"> - </p>
-        </div>
-    </section> -->
-
-
-    <!-- <button onclick="sendEvent()">Send</button> -->
-
-
-
-
     <script>
 
     </script>
@@ -55,7 +32,7 @@
     <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
     <script src="data/mapFeatures.js"></script>
     <script src="ui.js"></script>
-    <script src="front-index-2.js"></script>
+    <script src="index.js"></script>
 
 </body>
 
